Lowercase app title and add centered header
Align branding by changing the document title to lowercase “deepbible” and adding a centered h3 header above the app container for improved UI consistency.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>DeepBible</title>
+<title>deepbible</title>
 <style>
   :root {
     --base03:  #002b36;
@@ -30,6 +30,11 @@
     background-color: var(--base2);
     color: var(--base01);
     margin: 2em 0;
+  }
+  h3 {
+    text-align: center;
+    color: var(--base3);
+    margin-top: -1em;
   }
   .pericope {
     display: flex;
@@ -87,6 +92,7 @@
 </style>
 </head>
 <body>
+<h3>deepbible</h3>
 <div id="app"></div>
 <script type="module" src="./main.js"></script>
 </body>
