--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,6 +73,20 @@
     color: var(--violet);
     font-size: 0.7em;
   }
+  .source-list {
+    padding: 1em;
+    position: absolute;
+    top: auto;
+    left: auto;
+    background-color: var(--base3);
+    border: 1px dashed var(--base1);
+    max-height: 30em;
+    overflow: auto;
+  }
+  .source-language { font-weight: bold; text-align: left; padding: 0; margin: 0; display: block; margin-block-start: 0; margin-block-end: 0; }
+  .source-options { text-align: left; list-style: none; }
+  .source-option-name { color: var(--violet); }
+  .source-option-description { color: var(--base1); }
   .textus {
     padding: 1em;
     background-color: #fdf6e3;
