--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,6 +36,7 @@
     text-align: center;
     color: var(--base3);
     margin-top: -1em;
+    margin-bottom: 0.5em;
   }
   .pericope {
     display: flex;
@@ -147,6 +148,62 @@
   .verse n { color: var(--base1); font-size: xx-small; text-shadow: none; }
   .verse f { color: var(--base1); text-shadow: none; }
   .verse j { text-shadow: 0 0 var(--orange); }
+  .help-footer {
+    position: absolute;
+    bottom: 1em;
+    width: 100%;
+    text-align: center;
+    margin-top: 1em;
+  }
+  .help-link {
+    color: var(--blue);
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .help-link:hover {
+    text-decoration: underline;
+  }
+  .help-modal-backdrop {
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 43, 54, 0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5em;
+    z-index: 10;
+  }
+  .help-modal {
+    background-color: var(--base3);
+    color: var(--base01);
+    max-width: 40em;
+    width: 100%;
+    border-radius: 0.5em;
+    padding: 2em;
+    box-shadow: 0 0 1.5em rgba(0, 0, 0, 0.35);
+    outline: none;
+  }
+  .help-modal h3 {
+    margin-top: 0;
+    color: var(--base01);
+  }
+  .help-modal ul {
+    padding-left: 1.4em;
+    color: var(--base00);
+  }
+  .help-close {
+    margin-top: 1.5em;
+    background-color: var(--blue);
+    color: var(--base3);
+    border: none;
+    padding: 0.6em 1.2em;
+    border-radius: 0.3em;
+    cursor: pointer;
+    font-size: 1em;
+  }
+  .help-close:hover {
+    background-color: var(--cyan);
+  }
 </style>
 </head>
 <body>
