Add logo in watermark

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,6 +31,11 @@
     background-color: var(--base2);
     color: var(--base01);
     margin: 2em 0;
+    background-image: url(logo.svg);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: 40em;
+    background-attachment: fixed;
   }
   h2 {
     text-align: center;
