--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
   }
   h2 {
     text-align: center;
-    color: var(--base3);
+    color: var(--blue);
     margin-top: -1em;
     margin-bottom: 0.5em;
   }
@@ -94,7 +94,7 @@
     background-color: var(--base3);
     border: 1px dashed var(--base1);
     max-height: 30em;
-    max-width: 30em;
+    /*max-width: 30em;*/
     overflow: auto;
   }
   .source-language {
@@ -102,6 +102,7 @@
     text-align: left;
     cursor: default;
     color: var(--base00);
+    margin-top: 1em 0;
   }
   .source-options {
     text-align: left;
@@ -111,6 +112,13 @@
     display: block;
     margin-block-start: 0;
     margin-block-end: 0;
+  }
+  .source-option {
+    padding: 0.3em 0;
+    cursor: pointer;
+  }
+  .source-option:hover {
+    background-color: var(--base2);
   }
   .source-option-name { color: var(--violet); }
   .source-option-description { color: var(--base1); }
