Remove absolute positioning from help footer
Use margin shorthand for vertical spacing and integrate the help footer into the normal flow to prevent overlap and improve layout consistency.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -162,11 +162,9 @@
   .verse f { color: var(--base1); text-shadow: none; }
   .verse j { text-shadow: 0 0 var(--orange); }
   .help-footer {
-    position: absolute;
-    bottom: 1em;
     width: 100%;
     text-align: center;
-    margin-top: 1em;
+    margin: 1em 0;
   }
   .help-link {
     color: var(--blue);
