Click selected address to create pericope
Allow users to click the combined verse address in the pericope header to spawn a new pericope based on the current selection. This adds a helper to compute the address text, attaches click handlers in both JS and PureScript components, and updates styles to indicate clickability.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,6 +81,7 @@
   .didascalia .selected-address {
     color: var(--green);
     font-size: x-small;
+    cursor: pointer;
   }
   .source {
     color: var(--violet);
