Add draggable handle to didascalia header
Wrap address and handle in a .didascalia-header container to isolate drag interactions and improve UX. Update CSS cursors and refactor render logic in both JS and Purescript, adjusting pattern-match error line numbers accordingly.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,22 @@
     min-width: 7em;
     text-align: right;
     user-select: none;
-    cursor: move;
+    cursor: default;
+  }
+  .didascalia-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 0.5em;
+  }
+  .didascalia-handle {
+    font-size: 1.2em;
+    cursor: grab;
+    user-select: none;
+    color: var(--base1);
+  }
+  .didascalia:active .didascalia-handle {
+    cursor: grabbing;
   }
   .margin {
     padding: 1em;
