Justify text in .textus container
Enhance readability by aligning paragraph text evenly within the .textus section.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -141,6 +141,7 @@
   .textus {
     padding: 1em;
     background-color: #fdf6e3;
+    text-align: justify;
     flex: 1;
   }
   .cross-references {
