--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,11 +64,31 @@
     justify-content: space-between;
     gap: 0.5em;
   }
+  .didascalia-handle-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.25em;
+  }
   .didascalia-handle {
     font-size: 1.2em;
     cursor: grab;
     user-select: none;
     color: var(--base1);
+    font-size: smaller;
+  }
+  .didascalia-remove {
+    border: none;
+    background: transparent;
+    color: var(--red);
+    cursor: pointer;
+    font-size: smaller;
+    line-height: 1;
+    padding: 0;
+  }
+  .didascalia-remove:hover,
+  .didascalia-remove:focus-visible {
+    color: var(--orange);
   }
   .didascalia:active .didascalia-handle {
     cursor: grabbing;
