Hide ecnum elements in commentary text
Add .commentary-text .ecnum to the display: none rule so that editorial numbering is hidden alongside .rdgtype for consistent formatting in the commentary view.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -203,7 +203,8 @@
   .commentary-text .vuid,
   .commentary-text .vudesc,
   .commentary-text .versetext,
-  .commentary-text .rdgtype
+  .commentary-text .rdgtype,
+  .commentary-text .ecnum
     { display: none; }
   .commentary-text .rdgtxt { font-weight: bold; }
   .commentary-text a { pointer-events: none; color: var(--base1); text-decoration: none; }
