Allow text wrapping in didascalia address and source
Enable normal wrapping and disable word breaks, emergency breaks, and hyphenation on caption address and source fields to improve readability and prevent overflow of long text.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,7 +99,13 @@
     text-align: left;
     user-select: none;
   }
-  .didascalia .address, .didascalia .source { cursor: pointer; }
+  .didascalia .address, .didascalia .source {
+    cursor: pointer;
+    white-space: normal;     /* allow wrapping */
+    word-break: keep-all;    /* don't break inside words */
+    overflow-wrap: normal;   /* no emergency breaking */
+    hyphens: none;           /* no auto-hyphenation */ 
+  }
   .didascalia .address.editing input:focus-visible,
   .didascalia .source.editing input:focus-visible {
     outline: none;
