--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,300 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>deepbible</title>
-<style>
-  :root {
-    --base03:  #002b36;
-    --base02:  #073642;
-    --base01:  #586e75;
-    --base00:  #657b83;
-    --base0:   #839496;
-    --base1:   #93a1a1;
-    --base2:   #eee8d5;
-    --base3:   #fdf6e3;
-    --yellow:  #b58900;
-    --orange:  #cb4b16;
-    --red:     #dc322f;
-    --magenta: #d33682;
-    --violet:  #6c71c4;
-    --blue:    #268bd2;
-    --cyan:    #2aa198;
-    --green:   #859900;
-    --font:    'Arial', sans-serif;
-  }
-  ::selection { color: var(--blue); background-color: var(--base2); }
-  body {
-    font-family: var(--font);
-    font-size: 1.1rem;
-    background-color: var(--base2);
-    color: var(--base01);
-    margin: 2em 0;
-    background-image: url(logo.svg);
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: 40em;
-    background-attachment: fixed;
-  }
-  h2 {
-    text-align: center;
-    color: var(--blue);
-    margin-top: -1em;
-    margin-bottom: 0.5em;
-  }
-  .pericope {
-    display: flex;
-    max-width: 70em;
-    margin: auto;
-  }
-  .pericope + .pericope {
-    border-top: 1px dashed var(--base1);
-  }
-  .didascalia {
-    padding: 1em;
-    width: 6em;
-    text-align: right;
-    user-select: none;
-    cursor: default;
-  }
-  .didascalia-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 0.5em;
-  }
-  .didascalia-handle-group {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.25em;
-  }
-  .didascalia-handle {
-    font-size: 1.2em;
-    cursor: grab;
-    user-select: none;
-    color: var(--base1);
-    font-size: smaller;
-  }
-  .didascalia-remove {
-    border: none;
-    background: transparent;
-    color: var(--red);
-    cursor: pointer;
-    font-size: smaller;
-    line-height: 1;
-    padding: 0;
-  }
-  .didascalia-remove:hover,
-  .didascalia-remove:focus-visible {
-    color: var(--orange);
-  }
-  .didascalia:active .didascalia-handle {
-    cursor: grabbing;
-  }
-  .margin {
-    padding: 1em;
-    width: 6em;
-    text-align: left;
-    user-select: none;
-  }
-  .didascalia .address, .didascalia .source {
-    cursor: pointer;
-    white-space: normal;     /* allow wrapping */
-    word-break: keep-all;    /* don't break inside words */
-    overflow-wrap: normal;   /* no emergency breaking */
-    hyphens: none;           /* no auto-hyphenation */ 
-  }
-  .didascalia .address.editing input:focus-visible,
-  .didascalia .source.editing input:focus-visible {
-    outline: none;
-  }
-  .didascalia .address.editing input,
-  .didascalia .source.editing input {
-    max-width: 6em;
-    box-sizing: border-box;
-    border: none;
-    background-color: var(--base3);
-    color: var(--base00);
-    font-size: 1em;
-  }
-  .didascalia .selected-address {
-    color: var(--green);
-    font-size: x-small;
-    cursor: pointer;
-  }
-  .source {
-    color: var(--violet);
-    font-size: x-small;
-  }
-  .source-list {
-    padding: 1em;
-    position: absolute;
-    top: auto;
-    left: auto;
-    background-color: var(--base3);
-    border: 1px dashed var(--base1);
-    max-height: 30em;
-    overflow: auto;
-  }
-  .source-language {
-    font-weight: bold;
-    text-align: left;
-    cursor: default;
-    color: var(--base00);
-    margin-top: 1em 0;
-  }
-  .source-options {
-    text-align: left;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: block;
-    margin-block-start: 0;
-    margin-block-end: 0;
-  }
-  .source-option {
-    padding: 0.3em 0;
-    cursor: pointer;
-  }
-  .source-option:hover {
-    background-color: var(--base2);
-  }
-  .source-option-name { color: var(--violet); }
-  .source-option-description { color: var(--base1); }
-  .textus {
-    padding: 1em;
-    background-color: #fdf6e3;
-    text-align: justify;
-    flex: 1;
-  }
-  .cross-references {
-    list-style: none;
-    padding: 0;
-    margin: 0 0 1em 0;
-  }
-  .cross-reference {
-    color: var(--blue);
-    font-size: x-small;
-    cursor: pointer;
-    margin: 0.3em 0;
-  }
-  .cross-references-loading,
-  .cross-references-empty {
-    color: var(--base01);
-    font-size: x-small;
-  }
-  .commentaries {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  .commentary {
-    font-size: x-small;
-    color: var(--base01);
-  }
-  .commentary-marker {
-    color: var(--magenta);
-    font-weight: bold;
-    margin-right: 0.3em;
-  }
-  .commentary-text {
-    color: var(--base01);
-  }
-  .commentary-text .verseid,
-  .commentary-text .appHeadEm,
-  .commentary-text .appHeadInfoLinks,
-  .commentary-text .vuid,
-  .commentary-text .vudesc,
-  .commentary-text .versetext,
-  .commentary-text .rdgtype,
-  .commentary-text .ecnum
-    { display: none; }
-  .commentary-text .rdgtxt { font-weight: bold; }
-  .commentary-text a { pointer-events: none; color: var(--base1); text-decoration: none; }
-  .commentary-text .sup { vertical-align: super; font-size: smaller; }
-  .verse::before {
-    content: attr(data-verse);
-    color: var(--red);
-    font-size: x-small;
-    vertical-align: super;
-    margin-right: 0.2em;
-  }
-  .verse { display: inline; }
-  .verse + .verse::before { margin-left: 0.4em; }
-  .verse.selected { color: var(--green); }
-  .verse e { color: var(--base1); font-style: italic; text-shadow: none; }
-  .verse s { color: var(--violet); font-size: xx-small; text-decoration: none; text-shadow: none; }
-  .verse m { color: var(--magenta); font-size: xx-small; text-shadow: none; }
-  .verse n { color: var(--base1); font-size: xx-small; text-shadow: none; }
-  .verse f { color: var(--base1); text-shadow: none; }
-  .verse j { text-shadow: 0 0 var(--orange); }
-  .help-footer {
-    width: 100%;
-    text-align: center;
-    margin: 1em 0;
-  }
-  .help-link {
-    color: var(--blue);
-    text-decoration: none;
-    cursor: pointer;
-  }
-  .help-link:hover {
-    text-decoration: underline;
-  }
-  .help-modal-backdrop {
-    position: fixed;
-    inset: 0;
-    background-color: rgba(0, 43, 54, 0.7);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1.5em;
-    z-index: 10;
-  }
-  .help-modal {
-    background-color: var(--base3);
-    color: var(--base01);
-    max-width: 40em;
-    width: 100%;
-    border-radius: 0.5em;
-    padding: 2em;
-    box-shadow: 0 0 1.5em rgba(0, 0, 0, 0.35);
-    outline: none;
-  }
-  .help-modal h3 {
-    margin-top: 0;
-    color: var(--base01);
-  }
-  .help-modal ul {
-    padding-left: 1.4em;
-    color: var(--base00);
-  }
-  .help-close {
-    margin-top: 1.5em;
-    background-color: var(--blue);
-    color: var(--base3);
-    border: none;
-    padding: 0.6em 1.2em;
-    border-radius: 0.3em;
-    cursor: pointer;
-    font-size: 1em;
-  }
-  .help-close:hover {
-    background-color: var(--cyan);
-  }
-  @media (max-width: 570px) {
-    .didascalia, .margin { max-width: 3em; padding: 1em 0.2em; }
-    .didascalia .didascalia-header { flex-direction: column; }
-    .didascalia-handle-group { flex-direction: row; gap: 0.5em; }
-    .didascalia .address, .didascalia .source, .didascalia .selected-address { font-size: x-small; text-align: center; }
-    .didascalia .address.editing input,
-    .didascalia .source.editing input {
-      max-width: 100%;
-    }
-  }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>deepbible</title>
+  <link rel="stylesheet" href="styles/colors.css" />
+  <link rel="stylesheet" href="styles/typography.css" />
+  <link rel="stylesheet" href="styles/layout.css" />
+  <link rel="stylesheet" href="styles/media.css" />
+  <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
   <h2>deepbible</h2>
