--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>deepbible</title>
+  <script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
   <link rel="stylesheet" href="styles/colors.css" />
   <link rel="stylesheet" href="styles/typography.css" />
   <link rel="stylesheet" href="styles/layout.css" />
