--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>deepbible</title>
+  <title>deepbible.online</title>
   <script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
   <link rel="stylesheet" href="styles/colors.css" />
   <link rel="stylesheet" href="styles/typography.css" />
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
-  <h2>deepbible</h2>
+  <h2>deepbible.online</h2>
   <div id="app"></div>
   <script type="module" src="./main.js"></script>
 </body>
